chore: cleanup api docs
