# pkg/api/health.go
@@ -12,18 +12,16 @@ import (
 )
 
 type healthStatusResponse struct {
-	Status          string `json:"status"`
-	Version         string `json:"version"`
-	APIVersion      string `json:"apiVersion"`
-	DebugAPIVersion string `json:"debugApiVersion"`
+	Status     string `json:"status"`
+	Version    string `json:"version"`
+	APIVersion string `json:"apiVersion"`
 }
 
 func (s *Service) healthHandler(w http.ResponseWriter, _ *http.Request) {
 	status := s.probe.Healthy()
 	jsonhttp.OK(w, healthStatusResponse{
-		Status:          status.String(),
-		Version:         bee.Version,
-		APIVersion:      Version,
-		DebugAPIVersion: DebugVersion,
+		Status:     status.String(),
+		Version:    bee.Version,
+		APIVersion: Version,
 	})
 }
